<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Présentation.vue.VuePageConnexion" >


    <ImageButton
        android:id="@+id/bouton_logo_retour"
        android:layout_width="151dp"
        android:layout_height="127dp"
        android:src="@drawable/logocriti"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/fond_gris_Connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fond_gris_Connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_noir_1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/fond_rouge_Connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_rouge_1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/saisie_surnom_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/surnom_2_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fond_rouge_Connection" />

    <ImageView
        android:id="@+id/saisie_mot_passe_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/surnom_2_"
        app:layout_constraintBottom_toTopOf="@+id/bouton_Se_connecter_Connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saisie_surnom_connection" />

    <ImageButton
        android:id="@+id/bouton_Se_connecter_Connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:src="@drawable/bouton_connection_1_"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/zone_texte_surnom"
        android:layout_width="250dp"
        android:layout_height="86dp"
        android:layout_marginBottom="1dp"
        android:hint="Surnom"
        android:src="@drawable/bouton_blanc"
        android:textAlignment="center"
        android:textColor="#431212"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/saisie_surnom_connection"
        app:layout_constraintEnd_toEndOf="@+id/saisie_surnom_connection"
        app:layout_constraintStart_toStartOf="@+id/saisie_surnom_connection"
        app:layout_constraintTop_toTopOf="@+id/saisie_surnom_connection"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/zone_texte_mot_passe_1"
        android:layout_width="250dp"
        android:layout_height="86dp"
        android:layout_marginBottom="1dp"
        android:hint="Mot de passe"
        android:inputType="textPassword"
        android:src="@drawable/bouton_blanc"
        android:textAlignment="center"
        android:textColor="#431212"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/saisie_mot_passe_connection"
        app:layout_constraintEnd_toEndOf="@+id/saisie_mot_passe_connection"
        app:layout_constraintStart_toStartOf="@+id/saisie_mot_passe_connection"
        app:layout_constraintTop_toTopOf="@+id/saisie_mot_passe_connection"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>