...
        android:src="@drawable/rectangle_rouge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/bouton_Se_connecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/bouton_connection"
        app:layout_constraintBottom_toTopOf="@+id/bouton_s_inscrire_initial"
        app:layout_constraintEnd_toEndOf="@+id/fond_rouge"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fond_rouge"
        tools:ignore="SpeakableTextPresentCheck" />

...
